[package]
name = "tanker_price"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "3.1.8", features = ["derive", "env"] }
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
prometheus = "0.13.0"
axum = "0.5.0"
