[package]
name = "tanker_price"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
recoord = { version = "0.2", features = ["all", "format_dd", "rustls-tls"], default-features = false }
prometheus = "0.13.0"
axum = "0.7"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0.64"
